; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_ps2mouse.c_ps2mouse_toggle.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_ps2mouse.c_ps2mouse_toggle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ps2mouse_softc = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ps2mouse_toggle(%struct.ps2mouse_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.ps2mouse_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.ps2mouse_softc* %0, %struct.ps2mouse_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %3, align 8
  %6 = getelementptr inbounds %struct.ps2mouse_softc, %struct.ps2mouse_softc* %5, i32 0, i32 1
  %7 = call i32 @pthread_mutex_lock(i32* %6)
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %3, align 8
  %12 = getelementptr inbounds %struct.ps2mouse_softc, %struct.ps2mouse_softc* %11, i32 0, i32 0
  store i32 1, i32* %12, align 8
  br label %25

13:                                               ; preds = %2
  %14 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %3, align 8
  %15 = getelementptr inbounds %struct.ps2mouse_softc, %struct.ps2mouse_softc* %14, i32 0, i32 0
  store i32 0, i32* %15, align 8
  %16 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %3, align 8
  %17 = getelementptr inbounds %struct.ps2mouse_softc, %struct.ps2mouse_softc* %16, i32 0, i32 2
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 2
  store i64 0, i64* %18, align 8
  %19 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %3, align 8
  %20 = getelementptr inbounds %struct.ps2mouse_softc, %struct.ps2mouse_softc* %19, i32 0, i32 2
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  store i64 0, i64* %21, align 8
  %22 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %3, align 8
  %23 = getelementptr inbounds %struct.ps2mouse_softc, %struct.ps2mouse_softc* %22, i32 0, i32 2
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  store i64 0, i64* %24, align 8
  br label %25

25:                                               ; preds = %13, %10
  %26 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %3, align 8
  %27 = getelementptr inbounds %struct.ps2mouse_softc, %struct.ps2mouse_softc* %26, i32 0, i32 1
  %28 = call i32 @pthread_mutex_unlock(i32* %27)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
